@@ -45,7 +45,8 @@ class ViewPageTemplateFile(AppPT, PageTemplateFile):
         namespace = self.pt_getContext(
             request=instance.request,
             instance=instance, args=args, options=keywords)
-        return self.pt_render(namespace)
+        return self.pt_render(namespace,
+                    sourceAnnotations=instance.request.debug.sourceAnnotations)
 
     def __get__(self, instance, type=None):
         return BoundPageTemplate(self, instance)
