@@ -97,4 +97,10 @@
     factory="zope.app.traversing.namespace.vh" 
     />
 
+<view
+    name="debug" type="*"
+    provides="zope.app.traversing.interfaces.ITraversable" for="*"
+    factory="zope.app.traversing.namespace.debug" 
+    />
+
 </configure>
