@@ -159,12 +159,13 @@ class XMLExportHandler(object):
     template = ViewPageTemplateFile('xmlexport_template.pt')
 
     def __init__(self, context):
-        self.context = context    
+        self.context = context
 
     def doExport(self):
         # Unfortunately, the template expects its parent to have an attribute
         # called request.
-        self.request = None
+        from zope.publisher.browser import TestRequest
+        self.request = TestRequest()
         return self.template()
 
     def getDublinCore(self, obj):
