@@ -51,7 +51,7 @@ class PageTemplate:
         engine.  This method is free to use the keyword arguments it
         receives.
 
-    pt_render(namespace, source=0)
+    pt_render(namespace, source=False, sourceAnnotations=False)
         Responsible the TAL interpreter to perform the rendering.  The
         namespace argument is a mapping which defines the top-level
         namespaces passed to the TALES expression engine.
@@ -99,7 +99,7 @@ class PageTemplate:
     def pt_getEngine(self):
         return Engine
 
-    def pt_render(self, namespace, source=False):
+    def pt_render(self, namespace, source=False, sourceAnnotations=False):
         """Render this Page Template"""
         self._cook_check()
         __traceback_supplement__ = (PageTemplateTracebackSupplement,
@@ -110,7 +110,8 @@ class PageTemplate:
         output = StringIO(u'')
         context = self.pt_getEngineContext(namespace)
         TALInterpreter(self._v_program, self._v_macros,
-                       context, output, tal=not source, strictinsert=0)()
+                       context, output, tal=not source, strictinsert=0,
+                       sourceAnnotations=sourceAnnotations)()
         return output.getvalue()
 
     def pt_errors(self, namespace):
